Refactor form submission logic in app.js, remove unused image assets, and enhance index.html with new school section and carousels. Update styles in style.css for improved layout and responsiveness.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     />
   </head>
   <body>
+    <!-- Header done -->
     <header class="header">
       <div class="logo">
         <img src="./img/logo.png" alt="Logo" />
@@ -27,10 +28,6 @@
       <div class="hero-container">
         <!-- Left Side - Event Info -->
         <div class="hero-left">
-          <div class="event-badge">
-            <span class="edition-badge">22nd EDITION</span>
-            <h1 class="event-title">Premier Schools Exhibition</h1>
-          </div>
           <div class="hero-content">
             <h2 class="hero-heading">Discover Gurugram's Top 30+ Schools</h2>
             <p class="hero-subheading">ALL IN ONE PLACE</p>
@@ -119,10 +116,178 @@
                   required
                 />
               </div>
-              <button type="submit" class="submit-btn">
-                SUBMIT <i class="fa-solid fa-arrow-right"></i>
+              <button class="register-btn" id="btn" aria-label="Register now">
+                <span class="register-btn__icon" aria-hidden="true">
+                  <i class="fa-solid fa-arrow-down"></i>
+                </span>
+                <span class="register-btn__text">SUBMIT</span>
               </button>
             </form>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="school">
+      <div class="school-up">
+        <div class="school-img">
+          <img src="./img/layer1/image1.png" alt="" />
+        </div>
+        <div class="school-img">
+          <img src="./img/layer1/image2.png" alt="" />
+        </div>
+        <div class="school-img">
+          <img src="./img/layer1/image3.png" alt="" />
+        </div>
+        <div class="school-img">
+          <img src="./img/layer1/image4.png" alt="" />
+        </div>
+      </div>
+      <div class="school-down">
+        <!-- Participating Schools Section -->
+        <div class="schools-section">
+          <h2>Participating Schools</h2>
+
+          <!-- First Carousel -->
+          <div class="carousel">
+            <div class="carousel__wrapper"
+              </div>
+              <ul class="carousel__content schools-grid1">
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school1.png" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school2.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school3.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school4.png" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school5.png" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school6.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school7.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school8.png" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school9.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- Second Carousel -->
+          <div class="carousel">
+            <div class="carousel__wrapper">
+              <ul class="carousel__content school-grid2">
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school1.png" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school2.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school3.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school4.png" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school5.png" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school6.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school7.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school8.png" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+                <li class="carousel__item">
+                  <a href="#">
+                    <div class="school-logo">
+                      <img src="./img/school/school9.jpg" alt="School Logo" />
+                    </div>
+                  </a>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
