Enhance gallery section in index.html with new layout and images, implement scroll-based animations in app.js for improved user interaction, and update styles in style.css for better aesthetics and functionality. Optimize scrolling experience with custom styles and GSAP animations.

--- a/index.html
+++ b/index.html
@@ -539,23 +539,15 @@
       </section>
       <section class="gallery-section">
         <h2 class="gallery-title">Gallery</h2>
-        <div class="gallery-wrapper">
-          <div class="gallery-track">
-            <div class="gallery-item">
-              <img src="./img/gallary/img1.jpg" alt="Gallery image 1" />
-            </div>
-            <div class="gallery-item">
-              <img src="./img/gallary/img2.jpg" alt="Gallery image 2" />
-            </div>
-            <div class="gallery-item">
-              <img src="./img/gallary/img3.jpg" alt="Gallery image 3" />
-            </div>
-            <div class="gallery-item">
-              <img src="./img/gallary/img4.jpg" alt="Gallery image 4" />
-            </div>
-            <div class="gallery-item">
-              <img src="./img/gallary/img5.jpg" alt="Gallery image 5" />
-            </div>
+      
+        <div class="gallery-mask">
+          <div class="mandatory">
+            <div class="card"><div><img src="./img/gallary/img1.jpg"></div></div>
+            <div class="card"><div><img src="./img/gallary/img2.jpg"></div></div>
+            <div class="card"><div><img src="./img/gallary/img3.jpg"></div></div>
+            <div class="card"><div><img src="./img/gallary/img4.jpg"></div></div>
+            <div class="card"><div><img src="./img/gallary/img5.jpg"></div></div>
+            <div class="card"><div><img src="./img/gallary/img6.jpg"></div></div>
           </div>
         </div>
       </section>
@@ -620,7 +612,9 @@
           Copyright © 2025 | All rights reserved. Premier Schools Exhibition
         </div>
       </footer>
-      
+      <script src="https://unpkg.com/gsap@3/dist/gsap.min.js"></script>
+<script src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
+
     <script src="app.js"></script>
   </body>
 </html>
